# newlib-ia16

./: config.sub
libgloss/: configure  configure.in
libgloss/ia16/: Makefile.in  configure  configure.in  dos-chdir.S  dos-close.S  dos-com-crt0.S  dos-com-write.S  dos-com.ld  dos-exe-small.ld  dos-fstat.S  dos-getcwd.S  dos-isatty.S  dos-lseek.S  dos-mkdir.S  dos-models-crt0.S  dos-open.S  dos-read.S  dos-rename.S  dos-rmdir.S  dos-sbrk.c  dos-unlink.S  dos-write.S  elks-combined.ld  elks-crt0.s  elks-sbrk.c  elks-separate.ld  elks-syscalls.c  elks-syscalls.h  fake-write.c  gen-elks-syscalls.awk  linuxvm86-crt0.S  linuxvm86.ld  sbrk.c
libgloss/libnosys/: configure.in
newlib/: configure.host
newlib/libc/include/: stdio.h
newlib/libc/include/machine/: ieeefp.h  setjmp.h
newlib/libc/include/sys/: config.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/ia16/: Makefile.am  Makefile.in  abort.c  memccpy.S  memchr.S  memcmp.S  memcpy.S  memmove.S  mempcpy.S  memrchr.S  memset.S  rawmemchr.S  setjmp.S  stpcpy.S  stpncpy.S  strchr.S  strcmp.S  strcpy.S  strlen.S  strncmp.S  strncpy.S
newlib/libc/machine/ia16/sys/: errno.h
newlib/libc/stdio/: fdopen.c  flags.c  freopen.c  local.h  stdio.c
